Fix the horizontal scrolling bug for meandall using overflow-x initial

--- a/src/targets/meandall/styles/scaffolding/base.less
+++ b/src/targets/meandall/styles/scaffolding/base.less
@@ -9,7 +9,7 @@ body {
 
 #main-container {
   background: @c-black;
-  overflow-x:hidden;
+  overflow-x:initial;
 }
 
 main {
